swiggyhelm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: swiggy
  namespace: swiggy
spec:
  ingressClassName: dagility-nginx-ingress
  rules:
  - host: swiggy.sftp.ustpace.com
    http:
      paths:
      - backend:
          service:
            name: swiggy-service
            port:
              number: 3000
        path: /
        pathType: Prefix
